PAGES: Correction du text-overflow et overflow des boutons Plats

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -609,6 +609,9 @@ footer a {
 .menu__content__bouton:hover .menu__content__bouton__check__icon {
   transform: rotate(360deg);
 }
+.menu__content__bouton:hover .menu__content__bouton__description {
+  width: 50%;
+}
 
 @keyframes menu__bouton__appear {
   0% {
@@ -640,6 +643,8 @@ footer a {
   flex-wrap: nowrap;
   padding-left: 4%;
   width: 100%;
+  height: 100%;
+  transition: width 500ms ease-in-out;
 }
 @media (min-width: 1025px) {
   .menu__content__bouton__description {
@@ -649,7 +654,7 @@ footer a {
 
 .menu__content__bouton__description p {
   margin-top: -40px;
-  width: 80%;
+  width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -661,9 +666,10 @@ footer a {
 }
 
 .menu__content__bouton__description h3 {
-  width: 80%;
+  width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .menu__content__bouton__price {
