--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -561,6 +561,9 @@ footer a {
   &:hover .menu__content__bouton__check__icon {
       transform: rotate(360deg);
   }
+  &:hover .menu__content__bouton__description {
+    width: 50%;
+  }
   }
   @keyframes menu__bouton__appear {
     0% {
@@ -589,13 +592,15 @@ footer a {
   flex-wrap: nowrap;
   padding-left: 4%;
   width: 100%;
+  height: 100%;
+  transition: width 500ms ease-in-out;
   @media (min-width:1025px) {
     width: 80%;
   }
 }
 .menu__content__bouton__description p{
   margin-top: -40px;
-  width: 80%;
+  width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -604,9 +609,10 @@ footer a {
   }
 }
 .menu__content__bouton__description h3{
-  width: 80%;
+  width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .menu__content__bouton__price {
   font-weight: bold;
